--- a/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -1,5 +1,6 @@
 import "@/app/speakeasy.css";
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -10,6 +11,7 @@ import {
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyDescriptionSection,
@@ -64,6 +66,33 @@ _List genrations_
 A generation is a grouping of the Pokémon games that separates them based on the Pokémon they include. In each generation, a new set of Pokémon, Moves, Abilities and Types that did not exist in the previous generation are released.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_generation_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_generation_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/generation/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -464,6 +493,33 @@ _Get genration_
 A generation is a grouping of the Pokémon games that separates them based on the Pokémon they include. In each generation, a new set of Pokémon, Moves, Abilities and Types that did not exist in the previous generation are released.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_generation_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_generation_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/generation/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -1369,6 +1425,33 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokedex_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokedex_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokedex/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -1768,6 +1851,33 @@ _Get pokedex_
 A Pokédex is a handheld electronic encyclopedia device; one which is capable of recording and retaining information of the various Pokémon in a given region with the exception of the national dex and some smaller dexes related to portions of a region. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pokedex) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokedex_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokedex_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokedex/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -2619,6 +2729,33 @@ Versions of the games, e.g., Red, Blue or Yellow.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_version_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_version_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/version/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -3018,6 +3155,33 @@ _Get version_
 Versions of the games, e.g., Red, Blue or Yellow.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_version_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_version_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/version/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -3496,6 +3660,33 @@ Version groups categorize highly similar versions of the games.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_version_group_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_version_group_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/version-group/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -3901,6 +4092,33 @@ _Get version group_
 Version groups categorize highly similar versions of the games.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_version_group_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_version_group_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/version-group/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
