--- a/examples/custom/pokeapi/src/app/api/endpoint/items/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/items/page.mdx
@@ -1,5 +1,6 @@
 import "@/app/speakeasy.css";
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -10,6 +11,7 @@ import {
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyExamplesSection,
@@ -63,6 +65,33 @@ _List items_
 An item is an object in the games which the player can pick up, keep in their bag, and use in some manner. They have various uses, including healing, powering up, helping catch Pokémon, or to access a new area.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -457,6 +486,33 @@ _Get item_
 An item is an object in the games which the player can pick up, keep in their bag, and use in some manner. They have various uses, including healing, powering up, helping catch Pokémon, or to access a new area.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -1878,6 +1934,33 @@ Item categories determine where items will be placed in the players bag.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_category_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_category_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-category/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -2283,6 +2366,33 @@ _Get item category_
 Item categories determine where items will be placed in the players bag.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_category_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_category_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-category/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -2840,6 +2950,33 @@ Item attributes define particular aspects of items, e.g."usable in battle" or "c
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_attribute_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_attribute_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-attribute/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -3245,6 +3382,33 @@ _Get item attribute_
 Item attributes define particular aspects of items, e.g."usable in battle" or "consumable".
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_attribute_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_attribute_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-attribute/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -3889,6 +4053,33 @@ The various effects of the move"Fling" when used with different items.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_fling_effect_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_fling_effect_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-fling-effect/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -4294,6 +4485,36 @@ _Get item fling effect_
 The various effects of the move"Fling" when used with different items.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_fling_effect_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-api_v2_item_fling_effect_retrieve_code-samples_curl"
+>
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-fling-effect/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -4766,6 +4987,33 @@ Pockets within the players bag used for storing items by category.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_pocket_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_pocket_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-pocket/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -5171,6 +5419,33 @@ _Get item pocket_
 Pockets within the players bag used for storing items by category.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_item_pocket_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_item_pocket_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/item-pocket/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
