--- a/examples/custom/pokeapi/src/app/api/endpoint/pokemon/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/pokemon/page.mdx
@@ -1,5 +1,6 @@
 import "@/app/speakeasy.css";
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -10,6 +11,7 @@ import {
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyDescriptionSection,
@@ -58,6 +60,33 @@ Pokémon are the creatures that inhabit the world of the Pokémon games. They ca
 Abilities provide passive effects for Pokémon in battle or in the overworld. Pokémon have multiple possible abilities but can have only one ability at a time. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Ability) for greater detail.
 
 </OperationSummarySection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_ability_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_ability_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/ability/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -452,6 +481,33 @@ http://api.example.org/accounts/?offset=200&limit=100
 Abilities provide passive effects for Pokémon in battle or in the overworld. Pokémon have multiple possible abilities but can have only one ability at a time. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Ability) for greater detail.
 
 </OperationSummarySection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_ability_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_ability_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/ability/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -1671,6 +1727,33 @@ Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_characteristic_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_characteristic_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/characteristic/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -2057,6 +2140,33 @@ _Get characteristic_
 Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon's Characteristic is determined by the remainder of its highest IV divided by 5 (gene_modulo). Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Characteristic) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_characteristic_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_characteristic_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/characteristic/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -2547,6 +2657,33 @@ Egg Groups are categories which determine which Pokémon are able to interbreed.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_egg_group_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_egg_group_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/egg-group/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -2946,6 +3083,33 @@ _Get egg group_
 Egg Groups are categories which determine which Pokémon are able to interbreed. Pokémon may belong to either one or two Egg Groups. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Egg_Group) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_egg_group_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_egg_group_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/egg-group/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -3447,6 +3611,33 @@ Genders were introduced in Generation II for the purposes of breeding Pokémon b
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_gender_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_gender_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/gender/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -3841,6 +4032,33 @@ Genders were introduced in Generation II for the purposes of breeding Pokémon b
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_gender_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_gender_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/gender/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -4197,6 +4415,33 @@ _List growth rates_
 Growth rates are the speed with which Pokémon gain levels through experience. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Experience) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_growth_rate_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_growth_rate_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/growth-rate/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -4603,6 +4848,33 @@ _Get growth rate_
 Growth rates are the speed with which Pokémon gain levels through experience. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Experience) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_growth_rate_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_growth_rate_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/growth-rate/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -5180,6 +5452,33 @@ Damage classes moves can have, e.g. physical, special, or non-damaging.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_move_damage_class_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_move_damage_class_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/move-damage-class/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -5585,6 +5884,36 @@ _Get move damage class_
 Damage classes moves can have, e.g. physical, special, or non-damaging.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_move_damage_class_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-api_v2_move_damage_class_retrieve_code-samples_curl"
+>
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/move-damage-class/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -6209,6 +6538,33 @@ Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedi
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_nature_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_nature_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/nature/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -6602,6 +6958,33 @@ _Get nature_
 Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Nature) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_nature_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_nature_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/nature/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -7685,6 +8068,33 @@ Pokémon are the creatures that inhabit the world of the Pokémon games. They ca
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -8084,6 +8494,33 @@ _Get pokemon_
 Pokémon are the creatures that inhabit the world of the Pokémon games. They can be caught using Pokéballs and trained by battling with other Pokémon. Each Pokémon belongs to a specific species but may take on a variant which makes it differ from other Pokémon of the same species, such as base stats, available abilities and typings. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9mon_(species)) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -9737,6 +10174,33 @@ Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_color_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_color_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-color/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -10142,6 +10606,33 @@ _Get pokemon color_
 Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex is usually the color most apparent or covering each Pokémon's body. No orange category exists; Pokémon that are primarily orange are listed as red or brown.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_color_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_color_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-color/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -10614,6 +11105,33 @@ Some Pokémon may appear in one of multiple, visually different forms. These dif
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_form_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_form_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-form/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -11019,6 +11537,33 @@ _Get pokemon form_
 Some Pokémon may appear in one of multiple, visually different forms. These differences are purely cosmetic. For variations within a Pokémon species, which do differ in more than just visuals, the 'Pokémon' entity is used to represent such a variety.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_form_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_form_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-form/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -11813,6 +12358,33 @@ Habitats are generally different terrain Pokémon can be found in but can also b
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_habitat_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_habitat_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-habitat/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -12218,6 +12790,33 @@ _Get pokemom habita_
 Habitats are generally different terrain Pokémon can be found in but can also be areas designated for rare or legendary Pokémon.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_habitat_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_habitat_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-habitat/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -12690,6 +13289,33 @@ Shapes used for sorting Pokémon in a Pokédex.
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_shape_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_shape_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-shape/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -13095,6 +13721,33 @@ _Get pokemon shape_
 Shapes used for sorting Pokémon in a Pokédex.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_shape_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_shape_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-shape/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -13567,6 +14220,33 @@ A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Po
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_species_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_species_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-species/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -13972,6 +14652,33 @@ _Get pokemon species_
 A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Pokémon species are shared across all varieties of Pokémon within the species. A good example is Wormadam; Wormadam is the species which can be found in three different varieties, Wormadam-Trash, Wormadam-Sandy and Wormadam-Plant.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokemon_species_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokemon_species_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokemon-species/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -15988,6 +16695,33 @@ Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéat
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokeathlon_stat_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokeathlon_stat_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokeathlon-stat/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -16393,6 +17127,33 @@ _Get pokeathlon stat_
 Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéathlons. In Pokéathlons, competitions happen on different courses; one for each of the different Pokéathlon stats. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9athlon) for greater detail.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_pokeathlon_stat_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_pokeathlon_stat_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/pokeathlon-stat/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -16820,6 +17581,33 @@ Stats determine certain aspects of battles. Each Pokémon has a value for each s
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_stat_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_stat_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/stat/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -17213,6 +18001,33 @@ _Get stat_
 Stats determine certain aspects of battles. Each Pokémon has a value for each stat which grows as they gain levels and can be altered momentarily by effects in battles.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_stat_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_stat_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/stat/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -17859,6 +18674,33 @@ Types are properties for Pokémon and their moves. Each type has three propertie
 
 </OperationDescriptionSection>
 
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_type_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_type_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/type/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
+
 <OperationSecuritySection slot="security">
 
 <Section>
@@ -18252,6 +19094,33 @@ _Get types_
 Types are properties for Pokémon and their moves. Each type has three properties: which types of Pokémon it is super effective against, which types of Pokémon it is not very effective against, and which types of Pokémon it is completely ineffective against.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_type_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_type_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/type/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
