--- a/examples/custom/pokeapi/src/app/api/endpoint/utility/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/utility/page.mdx
@@ -1,5 +1,6 @@
 import "@/app/speakeasy.css";
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -10,6 +11,7 @@ import {
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyExamplesSection,
@@ -56,6 +58,33 @@ _List languages_
 Languages for translations of API resource information.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_language_list_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_language_list_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/language/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
@@ -456,6 +485,33 @@ _Get language_
 Languages for translations of API resource information.
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-api_v2_language_retrieve_code-samples_curl">
+
+cURL
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-api_v2_language_retrieve_code-samples_curl">
+
+<CodeSample>
+
+```curl
+curl https://pokeapi.co/api/v2/language/{id}/ \
+ -X GET
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationSecuritySection slot="security">
 
